--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -263,7 +263,7 @@
   flex-flow: column;
   justify-content: flex-end;
   align-items: center;
-  height: 100vh;
+  height: 100svh;
   padding-top: .6rem;
   padding-bottom: .6rem;
   display: flex;
@@ -686,7 +686,7 @@
   pointer-events: none;
   background-color: color-mix(in srgb, var(--swatch--dark-900) 20%, transparent);
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   display: none;
   position: absolute;
   inset: 0%;
@@ -825,7 +825,7 @@
   pointer-events: none;
   background-color: color-mix(in srgb, var(--swatch--dark-900) 20%, transparent);
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   display: block;
   position: absolute;
   inset: 0%;
@@ -1073,7 +1073,7 @@
 .modal_backdrop {
   background-color: color-mix(in srgb, var(--swatch--dark-900) 50%, var(--swatch--transparent));
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   position: absolute;
   inset: 0% 0% auto;
 }
@@ -1101,7 +1101,7 @@
   border-width: 0;
   width: 100%;
   max-width: none;
-  height: 100vh;
+  height: 100svh;
   max-height: none;
   margin: 0;
   padding: 0;
@@ -1125,7 +1125,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100dvh;
+  height: 100svh;
   display: flex;
 }
 
@@ -1724,7 +1724,7 @@
 .home_about_svg-wrap {
   width: 100%;
   height: 100%;
-  max-height: 100dvh;
+  max-height: 100svh;
   position: relative;
   overflow: visible;
 }
@@ -1959,7 +1959,7 @@
 .scroll-wrap {
   z-index: 999;
   width: .85rem;
-  height: 100vh;
+  height: 100svh;
   top: 0;
   right: 0;
 }
